--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "RUC Project",
   "main": "index.js",
+  "start": "node index.js",
   "scripts": {
     "test": "¨"
   },
