--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "compression": "^1.7.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "mongoose": "^5.12.9"
   }
 }
